--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ModalDialogs/_UploadFileFromClipboardPopup.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ModalDialogs/_UploadFileFromClipboardPopup.cshtml
@@ -11,7 +11,7 @@
                     <div class="form-group">
                         <label>@Translation.Get("1. Write filename (leave blank for automatic naming)") </label><br/>
                         <input class="" type="text" id="imgFilename" autocomplete="Off"/>
-                        <span id="imageNameRequired" style="color: red"> @Translation.Get("must be specified") </span>
+                        <span id="imageNameRequired" style="color: red;display:none"> @Translation.Get("must be specified") </span>
                     </div>
                     <div class="form-group">
                         <label>@(Translation.Get("2. Press Ctrl+V for inserting picture") )</label><br/>
