--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseLogNote.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseLogNote.cshtml
@@ -1,24 +1,24 @@
-﻿@using DH.Helpdesk.Web.Common.Extensions
-@using Log = DH.Helpdesk.Domain.Log;
-@model DH.Helpdesk.SelfService.Models.Case.CaseLogModel
+﻿@using DH.Helpdesk.SelfService.Models.Case
+@using DH.Helpdesk.Web.Common.Extensions
+@model CaseLogsModel
 
 @functions
 {
-    string GetLogText(Log item)
+    string GetLogText(CaseLogModel item)
     {
-        var logText = Model.ShowInternalLogNotes ? item.Text_Internal : item.Text_External;
+        var logText = Model.ShowInternalLogNotes ? item.InternalText : item.ExternalText;
         return (logText ?? string.Empty).Trim();
     }
 
-    string GetLogUser(Log logItem)
+    string GetLogUser(CaseLogModel logItem)
     {
-        var userName = logItem.User_Id == null
-            ? (logItem.RegUser == Model.CurrentUser ? Translation.Get("Me") : logItem.RegUser)
-            : logItem.User.FirstName + " " + logItem.User.SurName;
+        var userName = logItem.UserId == null
+            ? (logItem.RegUserName == Model.CurrentUser ? Translation.Get("Me") : logItem.RegUserName)
+            : logItem.UserFirstName + " " + logItem.UserSurName;
         return userName;
     }
 
-    MvcHtmlString FormatLogText(Log logItem)
+    MvcHtmlString FormatLogText(CaseLogModel logItem)
     {
         var logText = GetLogText(logItem).AddCharacterInParts(70, Environment.NewLine, Environment.NewLine);
         var formatted = MvcHtmlString.Create(Html.Encode(logText).Replace(Environment.NewLine, "<br />").Replace("\n", "<br />"));
@@ -28,22 +28,20 @@
 
 @if (Model.CaseLogs != null)
 {
-    var logItems = Model.CaseLogs.Where(l => !string.IsNullOrEmpty(GetLogText(l))).ToList();
-
-    foreach (var logItem in logItems)
+    foreach (var logModel in Model.CaseLogs)
     {
-        var regDate = logItem.RegTime.ToLocalTime();
-        <div class="@(!string.IsNullOrEmpty(logItem.RegUser) ? "com-list-hd" : "com-list-com")">
+        var regDate = logModel.RegTime.ToLocalTime();
+        <div class="@(!string.IsNullOrEmpty(logModel.RegUserName) ? "com-list-hd" : "com-list-com")">
             <div class="list-arrow"></div>
-            <p>@GetLogUser(logItem) | @Html.DisplayFor(l => regDate)</p>
+            <p>@GetLogUser(logModel) | @Html.DisplayFor(l => regDate)</p>
             @*<p>@Html.Raw(FormatLogText(logItem))</p>*@
-            <p>@FormatLogText(logItem)</p>
+            <p>@FormatLogText(logModel)</p>
             <p>
-                @if (logItem.LogFiles != null)
+                @if (logModel.Files != null)
                 {
-                    foreach (var f in logItem.LogFiles)
+                    foreach (var f in logModel.Files)
                     {
-                        <a href="@Url.Action("DownloadLogFile", "Case", new { id = logItem.Id, fileName = f.FileName })">
+                        <a href="@Url.Action("DownloadLogFile", "Case", new { id = logModel.Id, caseId = logModel.CaseId, fileName = Url.Encode(f.FileName) })">
                             <i class="glyphicon glyphicon-file"></i>
                             @f.FileName
                         </a>
