--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseReceipt.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseReceipt.cshtml
@@ -6,7 +6,6 @@
 
 @model DH.Helpdesk.SelfService.Models.Case.CaseOverviewModel
 
-
 <script type="text/javascript">
     window.caseLogsParameters = {
         caseDetailsUrl: '@Url.Content("~/Case/Index")',
@@ -14,7 +13,7 @@
         getLogFilesUrl: '@Url.Action("GetLogFiles", "Case")',
         deleteLogFileUrl: '@Url.Action("DeleteLogFile")',
         downloadLogFileUrl: '@Url.Action("DownloadLogFile")',
-        downloadLogFileParamUrl: '@(!string.IsNullOrEmpty(Model.LogFileGuid) ? "id=" + Model.LogFileGuid + "&" : string.Empty)',
+        downloadLogFileParamUrl: '@Model.BuildCaseLogDownloadUrlParams()',
         saveLogMessageUrl: '@Url.Action("_CaseLogNote", "Case")',
         fileAlreadyExistsMsg: '@Html.Raw(Translation.Get("File already exists"))',
         logMandatoryText: '@Translation.Get("Comment is required!")',
@@ -26,12 +25,11 @@
         caseEmailGuid : '@ViewBag.caseEmailGuid'
     }
 </script>
-
+@Html.Hidden("CaseId", Model.CasePreview.Id)
 @Html.Hidden("caseLog_languageId", SessionFacade.CurrentLanguageId)
 
 @if (Model.CaseFieldGroups.Contains(Enums.CaseFieldGroups.UserInformation))
 {
-    <input id="CaseId" type="hidden" value="@Model.CasePreview.Id" />
     <h4>@Model.CaseSectionSettings.GetSectionHeader(CaseSectionType.Initiator, CaseSectionsEnglish.InitiatorHeader) </h4>
     <div class="row">
         <div class="col-md-3 dh-col">
@@ -506,9 +504,7 @@
                 @if (ViewBag.AttachmentPlacement == 0 && Model.FieldSettings.Select(f => f.Name).Contains(GlobalEnums.TranslationCaseFields.Filename.ToString()))
                 {
                     <div class="form-group row">
-                        <label class="col-md-3">
-                            @Translation.Get(GlobalEnums.TranslationCaseFields.Filename.ToString(), Enums.TranslationSource.CaseTranslation, @SessionFacade.CurrentCustomerID)
-                        </label>
+                        <label class="col-md-3">@Translation.Get(GlobalEnums.TranslationCaseFields.Filename.ToString(), Enums.TranslationSource.CaseTranslation, @SessionFacade.CurrentCustomerID)</label>
                         <div class="col-md-6">
                             <table id="case_files_table" class="table table-striped">
                                 @if (Model.CasePreview.CaseFiles != null)
@@ -517,7 +513,7 @@
                                     {
                                         <tr>
                                             <td>
-                                                <a style="color:blue" href="@this.Url.Action("DownloadFile", new RouteValueDictionary { { "id", Model.CasePreview.Id }, { "fileName", file.FileName } })"><i class="icon-file"></i>@file.FileName</a>
+                                                <a style="color:blue" href="@Url.Action("DownloadFile",  new { @id = Model.CasePreview.Id,  fileName = Url.Encode(file.FileName) })"><i class="icon-file"></i>@file.FileName</a>
                                             </td>
                                         </tr>
                                     }
@@ -534,8 +530,7 @@
 <!-- /Case Info Fields -->
 
 
-    @if (!Model.IsFinished && 
-        ViewBag.ApplicationType == ApplicationTypes.SelfService && !ViewBag.ShowCommunicationForSelfService)
+    @if (!Model.IsFinished && Model.ApplicationType == ApplicationType.SelfService && !Model.ShowCommunicationForSelfService)
     {
         <div id="logNotesSection">
             <h4>@Model.CaseSectionSettings.GetSectionHeader(CaseSectionType.Communication, CaseSectionsEnglish.CommunicationHeader) </h4>
@@ -549,8 +544,7 @@
                                     <textarea id="logNote" class="col-md-12" style="height: 100px; margin-bottom: 10px;"></textarea>
                                 </div>
                             </div>
-
-                            @if (Model.FieldSettings.Select(f => f.Name).Contains(GlobalEnums.TranslationCaseFields.tblLog_Filename.ToString().Replace('_', '.')))
+                            @if (Model.FieldSettings.GetField(GlobalEnums.TranslationCaseFields.tblLog_Filename.ToString()) != null)
                             {
                                 <div class="form-group row">
                                     <label class="col-md-3">@Translation.GetForCase(GlobalEnums.TranslationCaseFields.Filename.ToString(), @SessionFacade.CurrentCustomerID)</label>
@@ -581,7 +575,7 @@
                                 <div class="col-md-3"></div>
                                 <div class="col-md-8">
                                     <div id="CaseLogPartial" class="onpage com-list">
-                                        @Html.Partial("_CaseLogNote", Model.CaseLogModel)
+                                        @Html.Partial("_CaseLogNote", Model.CaseLogsModel)
                                     </div>
                                 </div>
                             </div>
@@ -599,7 +593,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div id="CaseLogPartial" class="onpage com-list">
-                        @Html.Partial("_CaseLogNote", Model.CaseLogModel)
+                        @Html.Partial("_CaseLogNote", Model.CaseLogsModel)
                     </div>
                 </div>
             </div>
